2011-09-15  6.7.2-7 Cristy  <quetzlzacatenango@image...>
  * Convert empty .htm / .html file no longer removes source file.
  * -crop 11x2@ now returns 22 images as expected.

2011-09-13  6.7.2-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-6.

2011-09-12  6.7.2-6 Cristy  <quetzlzacatenango@image...>
  * Expand pixel range for 12 bit DCM images stored in 16-bit words.
  * Gray images not displayed properly when saved as MIFF with sRGB
    colorspace.
  * OpenCL's clCreateContextFromType() no longer returns a system default.
  * Use -enable-zero-configuration for zero configuration ImageMagick
    (previously -enable-embeddable).

2011-09-10  6.7.2-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-5.

2011-09-10  6.7.2-5 Cristy  <quetzlzacatenango@image...>
  * SO bump.

2011-09-09  6.7.2-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-4.

2011-09-05  6.7.2-4 Cristy  <quetzlzacatenango@image...>
  * Fix cut-n-paste error when reading JPEG profiles.

2011-09-07  6.7.2-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-3.

2011-09-05  6.7.2-3 Cristy  <quetzlzacatenango@image...>
  * A small memory overwrite when reading TIFF with 1-bit alpha (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19417).
  * Remove a 2 byte memory leak when checking for environment variables.

2011-09-05  6.7.2-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.2-2.

2011-09-03  6.7.2-2 Glenn Randers-Pehrson <glennrp@image...>
  * Recognize the sRGB ICC profile and write the PNG sRGB profile instead
    of a full iCCP chunk.

2011-08-31  6.7.2-2 Cristy  <quetzlzacatenango@image...>
  * Write grayscale MIFF as a single gray pixel component, not RGB (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=19403).
  * Bail gracefully for corrupt JPEG images.
  * Bail gracefully for negative montage geometries (references
    https://bugzilla.redhat.com/show_bug.cgi?id=735599).